CHANGES.txt - 09/02/2003
------------------------

CHANGES IN CUPS V1.1.20rc1

	- The web interface did not work on systems where time_t
	  is 64 bits (STR #262)
	- Added backend tweeks and content-length check from Red
	  Hat (STR #253)
	- The USB backend now uses the 8255 constants instead of
	  the standard constants when reporting printer status
	  bits on Linux (STR #254)
	- Added new cupsDoAuthentication(), cupsGetFd(),
	  cupsGetFile(), cupsPutFd(), and cupsPutFile() functions
	  to the CUPS API (STR #112)
	- The PDF filter always scaled and offset pages; this
	  caused problems under MacOS X, so now the "fitplot"
	  option controls whether PDF files are scaled to fit
	  within the printable area of the page (STR #250)
	- The LPD backend did not support the port number in a
	  URI (STR #247)
	- Some filters didn't properly support boolean options
	  (STR #249)
	- Landscape PDF files were not always offset by the
	  correct amount when rotating (STR #243)
	- The scheduler could hang in a call to localtime() when
	  logging messages from the signal handler (STR #242)
	- The PDF filter no longer prints form widgets; this
	  duplicates the behavior of Acrobat Reader (STR #241)
	- cupsGetPPD() didn't handle a late termination of a
	  HTTP connection with the server (STR #220)
	- ppdOpen() did not correctly check for "*PPD-Adobe-4."
	  on the first line of a PPD file. This caused incorrect
	  PASS results for some PPD files (STR #233)
	- cupsEncodeOptions() did not allow boolean options to
	  use "yes" and "on" for true values (STR #227)
	- The pstops filter only sent the TBCP exit sequence if
	  it was defined in the JCLEnd attribute in the PPD file
	  (STR #224)
	- Support for more than 1024 files was broken on Solaris
	  9 (STR #217)
	- The setgroups() calls now pass in 1 group (the
	  configured group) instead of 0 for compatibility with
	  BSD and Darwin (STR #213)
	- The scheduler's built-in broadcast throttling was